---
source: melior/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %f = constant @foo : () -> ()
    call_indirect %f() : () -> ()
    return
  }
}

